force-app/main/default/objects/Advanced_Track__c/Advanced_Track__c.object-meta.xml
<CustomObject>
    <description>This module will track participants interested in the advanced tracks</description>
    <label>Advanced Track</label>
    <nameField>
        <label>Advanced Tracks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advanced Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>