force-app/main/default/objects/Advanced_Track__c/fields/Advanced_Program__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Program__c</fullName>
    <label>Advanced Program</label>
    <type>Date</type>
</CustomField>