force-app/main/default/objects/Advanced_Track__c/fields/Align_Ability_with_Project_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Align_Ability_with_Project_Go_Live__c</fullName>
    <label>Align Ability with Project Go Live</label>
    <type>Date</type>
</CustomField>