force-app/main/default/objects/Advanced_Track__c/fields/Alignment_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Alignment_Call_Completed__c</fullName>
    <label>Alignment Call Completed</label>
    <type>Date</type>
</CustomField>