force-app/main/default/objects/Advanced_Track__c/fields/Alternative_Module_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Module_Proposal__c</fullName>
    <label>Alternative Module Proposal</label>
    <type>Date</type>
</CustomField>