force-app/main/default/objects/Advanced_Track__c/fields/Attend_Related_Course__c.field-meta.xml
<CustomField>
    <fullName>Attend_Related_Course__c</fullName>
    <label>Attend Related Course</label>
    <type>Date</type>
</CustomField>