force-app/main/default/objects/Advanced_Track__c/fields/Attend_Train_the_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Attend_Train_the_Trainer__c</fullName>
    <label>Attend Train-the-Trainer</label>
    <type>Date</type>
</CustomField>