force-app/main/default/objects/Advanced_Track__c/fields/Audit_Corrective_Action_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Audit_Corrective_Action_if_applicable__c</fullName>
    <label>Audit Corrective Action (if applicable)</label>
    <type>Date</type>
</CustomField>