force-app/main/default/objects/Advanced_Track__c/fields/Audit_is_the_Capstone_Project__c.field-meta.xml
<CustomField>
    <fullName>Audit_is_the_Capstone_Project__c</fullName>
    <label>Audit *is the Capstone Project</label>
    <type>Date</type>
</CustomField>