force-app/main/default/objects/Advanced_Track__c/fields/Audit_Preparation_Calls__c.field-meta.xml
<CustomField>
    <fullName>Audit_Preparation_Calls__c</fullName>
    <label>Audit Preparation Calls</label>
    <type>Date</type>
</CustomField>