force-app/main/default/objects/Advanced_Track__c/fields/Best_Practices_Audit__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_Audit__c</fullName>
    <label>Best Practices Audit</label>
    <type>Date</type>
</CustomField>