force-app/main/default/objects/Advanced_Track__c/fields/Business_Case_for_CM__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_for_CM__c</fullName>
    <label>Business Case for CM</label>
    <type>Date</type>
</CustomField>