force-app/main/default/objects/Advanced_Track__c/fields/Capstone_fee_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Capstone_fee_amount_paid__c</fullName>
    <label>Capstone fee amount paid</label>
    <type>TextArea</type>
</CustomField>