force-app/main/default/objects/Advanced_Track__c/fields/Capstone_fee_date_paid__c.field-meta.xml
<CustomField>
    <fullName>Capstone_fee_date_paid__c</fullName>
    <label>Capstone fee date paid</label>
    <type>Date</type>
</CustomField>