force-app/main/default/objects/Advanced_Track__c/fields/Capstone_Paid__c.field-meta.xml
<CustomField>
    <fullName>Capstone_Paid__c</fullName>
    <label>Capstone Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>