force-app/main/default/objects/Advanced_Track__c/fields/Capstone_Project_Complete__c.field-meta.xml
<CustomField>
    <fullName>Capstone_Project_Complete__c</fullName>
    <label>Capstone Project Complete</label>
    <type>Date</type>
</CustomField>