force-app/main/default/objects/Advanced_Track__c/fields/Capstone_Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Capstone_Project_Summary__c</fullName>
    <label>Capstone Project Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>