force-app/main/default/objects/Advanced_Track__c/fields/Change_Management_Agilie__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Agilie__c</fullName>
    <label>Change Management &amp; Agilie</label>
    <type>Date</type>
</CustomField>