force-app/main/default/objects/Advanced_Track__c/fields/Change_Management_ROI__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_ROI__c</fullName>
    <label>Change Management ROI</label>
    <type>Date</type>
</CustomField>