force-app/main/default/objects/Advanced_Track__c/fields/Change_Mgt_Blueprint__c.field-meta.xml
<CustomField>
    <fullName>Change_Mgt_Blueprint__c</fullName>
    <label>Change Mgt Blueprint</label>
    <type>Date</type>
</CustomField>