force-app/main/default/objects/Advanced_Track__c/fields/Change_Mgt_takes_Change_Mgt__c.field-meta.xml
<CustomField>
    <fullName>Change_Mgt_takes_Change_Mgt__c</fullName>
    <label>Change Mgt takes Change Mgt</label>
    <type>Date</type>
</CustomField>