force-app/main/default/objects/Advanced_Track__c/fields/Change_Saturation_and_Portfolio_Mgt__c.field-meta.xml
<CustomField>
    <fullName>Change_Saturation_and_Portfolio_Mgt__c</fullName>
    <label>Change Saturation and Portfolio Mgt</label>
    <type>Date</type>
</CustomField>