force-app/main/default/objects/Advanced_Track__c/fields/Change_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Change_Scorecard__c</fullName>
    <label>Change Scorecard</label>
    <type>Date</type>
</CustomField>