force-app/main/default/objects/Advanced_Track__c/fields/CMO_Considerations__c.field-meta.xml
<CustomField>
    <fullName>CMO_Considerations__c</fullName>
    <label>CMO Considerations</label>
    <type>Date</type>
</CustomField>