force-app/main/default/objects/Advanced_Track__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Advanced_Trackss</relationshipName>
    <type>Lookup</type>
</CustomField>