force-app/main/default/objects/Advanced_Track__c/fields/Cultural_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Cultural_Dimensions__c</fullName>
    <label>Cultural Dimensions</label>
    <type>Date</type>
</CustomField>