force-app/main/default/objects/Advanced_Track__c/fields/Delivering_Project_Results_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Project_Results_Workshop__c</fullName>
    <label>Delivering Project Results Workshop</label>
    <type>Date</type>
</CustomField>