force-app/main/default/objects/Advanced_Track__c/fields/Delivery_Deployment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Deployment_Plan__c</fullName>
    <label>Delivery Deployment Plan</label>
    <type>Date</type>
</CustomField>