force-app/main/default/objects/Advanced_Track__c/fields/DPR_eLearning_Modules__c.field-meta.xml
<CustomField>
    <fullName>DPR_eLearning_Modules__c</fullName>
    <label>DPR: eLearning Modules</label>
    <type>Date</type>
</CustomField>