force-app/main/default/objects/Advanced_Track__c/fields/ECM_Boot_Camp__c.field-meta.xml
<CustomField>
    <fullName>ECM_Boot_Camp__c</fullName>
    <label>ECM Boot Camp</label>
    <type>Date</type>
</CustomField>