force-app/main/default/objects/Advanced_Track__c/fields/ECM_Strategy_Planning__c.field-meta.xml
<CustomField>
    <fullName>ECM_Strategy_Planning__c</fullName>
    <label>ECM Strategy Planning</label>
    <type>Date</type>
</CustomField>