force-app/main/default/objects/Advanced_Track__c/fields/Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Endorsement__c</fullName>
    <label>Endorsement</label>
    <type>Date</type>
</CustomField>