force-app/main/default/objects/Advanced_Track__c/fields/Engage_PM_in_CM__c.field-meta.xml
<CustomField>
    <fullName>Engage_PM_in_CM__c</fullName>
    <label>Engage PM in CM</label>
    <type>Date</type>
</CustomField>