force-app/main/default/objects/Advanced_Track__c/fields/Enrollment_fee_amount__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_fee_amount__c</fullName>
    <label>Enrollment fee amount</label>
    <type>TextArea</type>
</CustomField>