force-app/main/default/objects/Advanced_Track__c/fields/Enrollment_fee_date_paid__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_fee_date_paid__c</fullName>
    <label>Enrollment fee date paid</label>
    <type>Date</type>
</CustomField>