force-app/main/default/objects/Advanced_Track__c/fields/Enrollment_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_fee_paid__c</fullName>
    <label>Enrollment fee paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>