force-app/main/default/objects/Advanced_Track__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <type>Date</type>
</CustomField>