force-app/main/default/objects/Advanced_Track__c/fields/Extension_fee__c.field-meta.xml
<CustomField>
    <fullName>Extension_fee__c</fullName>
    <label>Extension fee amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>