force-app/main/default/objects/Advanced_Track__c/fields/Extension_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>Extension_fee_paid__c</fullName>
    <label>Extension fee paid</label>
    <type>Date</type>
</CustomField>