force-app/main/default/objects/Advanced_Track__c/fields/Foundation_of_ECM__c.field-meta.xml
<CustomField>
    <fullName>Foundation_of_ECM__c</fullName>
    <label>Foundation of ECM</label>
    <type>Date</type>
</CustomField>