force-app/main/default/objects/Advanced_Track__c/fields/Future_of_Change_Managment__c.field-meta.xml
<CustomField>
    <fullName>Future_of_Change_Managment__c</fullName>
    <label>Future of Change Managment</label>
    <type>Date</type>
</CustomField>