force-app/main/default/objects/Advanced_Track__c/fields/Future_Vision_Maturity_Model__c.field-meta.xml
<CustomField>
    <fullName>Future_Vision_Maturity_Model__c</fullName>
    <label>Future Vision Maturity Model</label>
    <type>Date</type>
</CustomField>