force-app/main/default/objects/Advanced_Track__c/fields/Give_Speech__c.field-meta.xml
<CustomField>
    <fullName>Give_Speech__c</fullName>
    <label>Give Speech</label>
    <type>Date</type>
</CustomField>