force-app/main/default/objects/Advanced_Track__c/fields/Literature_Review__c.field-meta.xml
<CustomField>
    <fullName>Literature_Review__c</fullName>
    <label>Literature Review</label>
    <type>Date</type>
</CustomField>