force-app/main/default/objects/Advanced_Track__c/fields/Maturity_Model_Audit__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Model_Audit__c</fullName>
    <label>Maturity Model Audit</label>
    <type>Date</type>
</CustomField>