force-app/main/default/objects/Advanced_Track__c/fields/Methodology_Review__c.field-meta.xml
<CustomField>
    <fullName>Methodology_Review__c</fullName>
    <label>Methodology Review</label>
    <type>Date</type>
</CustomField>