force-app/main/default/objects/Advanced_Track__c/fields/Other_Advisor_Approved__c.field-meta.xml
<CustomField>
    <fullName>Other_Advisor_Approved__c</fullName>
    <label>Other:  Advisor Approved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>