force-app/main/default/objects/Advanced_Track__c/fields/Portfolio_Management__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Management__c</fullName>
    <label>Portfolio Management</label>
    <type>Date</type>
</CustomField>