force-app/main/default/objects/Advanced_Track__c/fields/Project_Health_Management__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Management__c</fullName>
    <label>Project Health Management</label>
    <type>Date</type>
</CustomField>