force-app/main/default/objects/Advanced_Track__c/fields/Publish_Article__c.field-meta.xml
<CustomField>
    <fullName>Publish_Article__c</fullName>
    <label>Publish Article</label>
    <type>Date</type>
</CustomField>