force-app/main/default/objects/Advanced_Track__c/fields/Recertified_Date__c.field-meta.xml
<CustomField>
    <fullName>Recertified_Date__c</fullName>
    <description>This is the date the participant recertified.</description>
    <label>Recertified Date</label>
    <type>Date</type>
</CustomField>