force-app/main/default/objects/Advanced_Track__c/fields/Resistance_Management__c.field-meta.xml
<CustomField>
    <fullName>Resistance_Management__c</fullName>
    <label>Resistance Management</label>
    <type>Date</type>
</CustomField>