force-app/main/default/objects/Advanced_Track__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apply</fullName>
                <default>true</default>
                <label>Apply</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Complete - Certified</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>