force-app/main/default/objects/Advanced_Track__c/fields/Status_and_Progress_Checks__c.field-meta.xml
<CustomField>
    <fullName>Status_and_Progress_Checks__c</fullName>
    <label>Status and Progress Checks</label>
    <type>Date</type>
</CustomField>