force-app/main/default/objects/Advanced_Track__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <type>Date</type>
</CustomField>