force-app/main/default/objects/Advanced_Track__c/fields/X5_Tenets_of_CM__c.field-meta.xml
<CustomField>
    <fullName>X5_Tenets_of_CM__c</fullName>
    <label>5 Tenets of CM</label>
    <type>Date</type>
</CustomField>