force-app/main/default/objects/Advanced_Track__c/recordTypes/Deployment_Leader_Track.recordType-meta.xml
<RecordType>
    <fullName>Deployment_Leader_Track</fullName>
    <active>true</active>
    <label>Deployment Leader Track</label>
</RecordType>