force-app/main/default/objects/Advanced_Track__c/recordTypes/Instructor_Track.recordType-meta.xml
<RecordType>
    <fullName>Instructor_Track</fullName>
    <active>true</active>
    <label>Instructor Track</label>
</RecordType>