force-app/main/default/objects/Advanced_Track__c/recordTypes/Practitioner_Track.recordType-meta.xml
<RecordType>
    <fullName>Practitioner_Track</fullName>
    <active>true</active>
    <label>Practitioner Track</label>
</RecordType>