force-app/main/default/objects/Advanced_Track__c/listViews/Completed_Track.listView-meta.xml
<ListView>
    <fullName>Completed_Track</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete - Certified</value>
    </filters>
    <label>Completed Track</label>
</ListView>