force-app/main/default/objects/Advanced_Track__c/listViews/Instructor_Track.listView-meta.xml
<ListView>
    <fullName>Instructor_Track</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Enrollment_fee_date_paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Advanced_Track__c.Instructor_Track</value>
    </filters>
    <label>Instructor Track</label>
</ListView>